conexion con db y creacion de primera table

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>Keep Our Small Inventary</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Mukta+Vaani" rel="stylesheet"> 
+    
 </head>
 <body>
     <div id="contenedor">
-        <div id="box-crearprod">
+        <div id="box_crearprod">
            <center>
             <h1>Crear Producto</h1>
            </center>
-            <div id="box-formulario">
+            <div id="box_formulario">
                 <form action="" name="form_crearproducto" method="GET">
                     <input type="text" name="descripcion_producto" placeholder="Descripción de Producto">
                     <input type="text" name="codigo_producto" placeholder="Código / Referencia">
